--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -35,27 +35,27 @@
             </nav>
         </div>
     </header>
-
-    <div class="form"> <!-- contenedor padre del formulario -->
-        <span>
-            <h1>Formulario de contacto</h1>
-            <h3><br>Escríbenos y en breve nos pondremos en contacto contigo</h3><br>
-        </span>
-        <form action="mailto:profe.mauro2020@gmail.com" method="post">       
-            <p>Nombre:</p>
-            <input type="text" class="field"><br>
-            <p>Correo electrónico:</p>
-            <input type="text" class="field"><br>
-            <p>Asunto:</p>
-            <input type="text" class="field"><br>                
-            <p>Mensaje:</p>
-            <textarea class="field"></textarea><br>
-            <p class="center-content">
+    <section>
+        <div class="form"> <!-- contenedor del formulario -->
+            <span>
+                <h1>Formulario de contacto</h1>
+                <h3>Escríbenos y en breve nos pondremos en contacto contigo</h3><br>
+            </span>
+            <form action="./enviar.php" method="post">
+                <p>Nombre:</p>
+                <input type="text" class="field"><br>
+                <p>Correo electrónico:</p>
+                <input type="email" class="field"><br>
+                <p>Asunto:</p>
+                <input type="text" class="field"><br>                
+                <p>Mensaje:</p>
+                <textarea class="field" name="message" id="message"></textarea><br>
+                <p class="center-content">
                 <input type="submit" class="btn btn-green" value="Enviar">
-            </p>    
-        </form>
-    </div>    
-
+                </p>    
+            </form>
+        </div>    
+    </section>
     <footer>    
         <!-- Posicionamiento con Bootstrap grid -->
         <div class="container text-center">
@@ -102,5 +102,7 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
