--- a/quienes_somos/quienes_somos.html
+++ b/quienes_somos/quienes_somos.html
@@ -21,10 +21,10 @@
 <body>
     <header class="contenedor_header"><!-- caja contenedora de la cabecera --> 
         <div class="logo_tienda">
-            <img src="../imagenes/Logo/Logo_Rolfi_Antigüedades-_300x132px_sinfondo.png" alt="imagen del Logo"><!-- Logo en la cabecera -->
+            <img src="../imagenes/Logo/Logo_Rolfi_Antigüedades-_300x132px_sinfondo.png" width="240" alt="imagen del Logo">
         </div>
         <div class="caja_barraNav">
-            <nav> <!-- barra de navegación --> 
+            <nav> <!-- barra de navegación -->
                 <ul>
                     <li><a href="../index.html">Inicio</a></li> 
                     <li><a href="../quienes_somos/quienes_somos.html">Quienes Somos</a></li>
@@ -35,13 +35,14 @@
             </nav>
         </div>
     </header>
+
     <section>            
         <div id="container_qs"> <!-- contenedor padre-->
             <div class="titulo_QS">
                 <h1>Quienes somos</h1>
             </div>                
             <div class="parrafo0_QS">
-                <p>Mi nombre es Rolfi Mauro, soy el responsable y dueño de esta tienda. Somos un anticuario ubicado en la ciudad de Concordia, Provincia de Entre Ríos, en la República Argentina.
+                <p>Mi nombre es <mark>Rolfi Mauro</mark>, soy el responsable y dueño de esta tienda. Somos un anticuario ubicado en la ciudad de Concordia, Provincia de Entre Ríos, en la República Argentina.
                 A traves de estas páginas usted encontrará una multitud de objetos curiosos, coleccionables y decorativos. Algunos, extraordinariamente raros, piezas
                 que hacen sentir y soñar a la hora de contemplarlas o admirarlas, muchas de ellas fueron parte de nuestra historia, otros formaron parte sensible de nuestra infancia.
                 </p>
@@ -61,7 +62,7 @@
                 <h2>Métodos de Pago</h2>
             </div>
             <div class="parrafo2_QS">
-                <p>Aceptamos Transferencias bancarias y Mercado pago.</p>            
+                <p>Aceptamos <mark>Transferencias bancarias</mark> y <mark>Mercado Pago</mark></p>            
             </div>
             <div class="imagen_derecha">
                 <img src="../imagenes/panoramicas/cartel_amtiguedades(280x500).jpg" alt="fotografía del letrero de la entrada"-->
@@ -83,7 +84,7 @@
                     <!-- columna 1 del footer-->
                     <div class="col-lg-4"  styles="">
                         <!--Mapa de ubicación <br>-->
-                        <h2> Ubicación </h2><br>
+                        <span><h2> Ubicación </h2><br></span>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27253.799493607046!2d-58.02985761062853!3d-31.36656882196342!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95adc29d50eaac19%3A0x3871c23c97684453!2sSan%20Juan%202445%2C%20E3200BCE%20Concordia%2C%20Entre%20R%C3%ADos!5e0!3m2!1ses-419!2sar!4v1664074374721!5m2!1ses-419!2sar" width="350" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <p></p>
                     </div>
@@ -103,7 +104,7 @@
               
                     <!-- columna 3 del footer-->
                     <div class="col-lg-4"  styles="">
-                        <h2><strong> Contactos</strong></h2><br>
+                        <h2>Contactos</h2><br>
                         <i class="fa-solid fa-phone"></i>
                         <span>
                             345 4044322
